@@ -173,6 +173,14 @@ LGPL_EXCEPTION.txt in this package.</source>
     </message>
 </context>
 <context>
+    <name>DocumentBrowser</name>
+    <message>
+        <location filename="src/plugins/golangdoc/documentbrowser.cpp" line="62"/>
+        <source>DocumentBrowser</source>
+        <translation type="unfinished"></translation>
+    </message>
+</context>
+<context>
     <name>EditorManager</name>
     <message>
         <location filename="src/liteapp/editormanager.cpp" line="172"/>
@@ -572,6 +580,29 @@ This file has been removed. Do you want save to file or close editor?</source>
     </message>
 </context>
 <context>
+    <name>GolangDoc</name>
+    <message>
+        <location filename="src/plugins/golangdoc/golangdoc.cpp" line="84"/>
+        <source>Find:</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="src/plugins/golangdoc/golangdoc.cpp" line="88"/>
+        <source>Clear</source>
+        <translation type="unfinished">Очистить</translation>
+    </message>
+    <message>
+        <location filename="src/plugins/golangdoc/golangdoc.cpp" line="92"/>
+        <source>Recent:</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="src/plugins/golangdoc/golangdoc.cpp" line="112"/>
+        <source>GolangDoc</source>
+        <translation type="unfinished"></translation>
+    </message>
+</context>
+<context>
     <name>GolangFmtPlugin</name>
     <message>
         <location filename="src/plugins/golangfmt/golangfmtplugin.cpp" line="96"/>
@@ -734,64 +765,64 @@ This file has been removed. Do you want save to file or close editor?</source>
 <context>
     <name>LiteEditor</name>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="150"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="151"/>
         <source>Undo</source>
         <translation>Отменить</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="151"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="152"/>
         <source>Redo</source>
         <translation>Повторить</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="152"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="153"/>
         <source>Cut</source>
         <translation>Вырезать</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="153"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="154"/>
         <source>Copy</source>
         <translation>Копировать</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="154"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="155"/>
         <source>Paste</source>
         <translation>Вставить</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="155"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="156"/>
         <source>File is writable</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="157"/>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="443"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="158"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="449"/>
         <source>Export PDF</source>
         <translation>Экспортировать в PDF</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="158"/>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="467"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="159"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="473"/>
         <source>Print Document</source>
         <translation>Печать документа</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="159"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="160"/>
         <source>Print Preview Document</source>
         <translation>Предварительный просмотр документа</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="222"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="223"/>
         <source>editor</source>
         <translation>редактор</translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="312"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="328"/>
         <source>File Is ReadOnly</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="315"/>
+        <location filename="src/plugins/liteeditor/liteeditor.cpp" line="331"/>
         <source>File Is Writable</source>
         <translation type="unfinished"></translation>
     </message>
