@@ -1,17 +1,22 @@
 --- 2011.7.6
 Ver x5 0.78125
-* add Search and Replace Editor
+* add CodeSearch plugin : Editor Search and Replace
+* add GolangDoc plugin : Golang Package Find
 * add Search and Replace Regex: (Colo)(u)(r) -> \1\3
 * add FileBorwser top dir setup
 * add LiteEditor Copy Syntax Color support (HTML mimedata)
 * add LiteEditor ReadOnly
 * add MainWindow all DockWidget saveState
 * add EditorManager CTRL+TAB switch
+* update tools/gopromake to r58
+* update tools/goexec to r58
+* update tools/goastview to r58
 * fix filebrowser rename show oldname
 * fix ENV c:/go/bin;%PATH% order, BOBIN is priority
 * fix FileBrowser sort incorrect on MACOSX
 * fix GoFmt reload editor display pos keep
 * fix Editor Close Ask BUG ret==SaveAll
+* fix Editor word writed ,compelter only one match auto hide
 
 --- 2011.6.30
 Ver x4 0.625
